CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(FISHEYE_TO_PANORAMA)
SET (CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(OpenCV REQUIRED)
MESSAGE(STATUS "OpenCV library status:")
MESSAGE(STATUS "    version: ${OpenCV_VERSION}")
MESSAGE(STATUS "    libraries: ${OpenCV_LIBS}")
MESSAGE(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")

ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(src)

ADD_EXECUTABLE(out main.cpp)

TARGET_LINK_LIBRARIES(out ${OpenCV_LIBS} calcmap)
SET(CMAKE_BUILD_TYPE DEBUG)
